# AndroidSourceStudy

./: Barrier.h  CMakeLists.txt  README.md  匿名共享内存
Binder/: BpBinder.cpp  BpBinder.h  IBinder.h  IPCThreadState.cpp  IPCThreadState.h  Parcel.cpp  Parcel.h  ProcessState.cpp  ProcessState.h  RefBase.h  android_os_Parcel.cpp  android_util_Binder.cpp  binder.c  binder.h  service_manager.c
Binder/driver/: binder.c
Binder/java/: Binder.java  BinderInternal.java  IBinder.java  IServiceManager.java  Parcel.java  ProcessState.java  ServiceManager.java  ServiceManagerNative.java  SystemServer.java
Binder/servicemanager/: binder.h
ams/: ActivityManagerNative.java  ActivityManagerService.java
art/: Runtime.c  fault_handle.cc  java_vm_ext.cc  java_vm_ext.h  native_loader.cpp  runtime.cc  sigchain.cc
gui/core/: window.h
gui/egl/: eglCreateWindowSurface.cpp  eglplatform.h
gui/gui/: BufferQueue.cpp  BufferQueue.h  IGraphicBufferProducer.cpp  Surface.cpp  Surface.h  SurfaceComposerClient.cpp  SurfaceComposerClient.h
gui/hardware/: fb.h  framebuffer.cpp  gralloc.c  gralloc.h  hardware.h
gui/ui/: FramebufferNativeWindow.cpp  (+1 more)
init/: AndroidRuntime.cpp  AndroidRuntime.h  RuntimeInit.java  SystemServer.java  SystemServerManager.java  Zygote.java  ZygoteConnection.java  ZygoteInit.java  app_main.cpp  com_android_server_SystemServer.cpp  init.rc  init.zygote64.rc  servicemanager.rc
mutex/: Condition.h  Mutex.h  ReaderWriterMutex.h  Timers.h
ref/: RefBase.cpp  RefBase.h  SmartPointer.h  StrongPointer.h
sign/: PackageParser.java
智能指针/: LightRefBase.h
